--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,13 +1,12 @@
-* {
-  // border: 1px solid orange;
-}
-
 .login {
   display: flex;
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-color: #f0dcd9;
+  background: -moz-linear-gradient(top, #F0DCD9 0%, #FAF5F4 100%);
+  background: -webkit-linear-gradient(top, #F0DCD9 0%, #FAF5F4 100%);
+  background: linear-gradient(to bottom, #F0DCD9 0%, #FAF5F4 100%);
+  // background-color: #f0dcd9;
 }
 
 .left-side {
@@ -16,18 +15,55 @@
   flex-direction: column;
   align-items: center;
   height: 70vh;
+  margin-top: 10vh;
+  border-radius: 8px 0 0 8px;
+  // box-shadow: 20px 20px 50px 10px pink inset;
+  box-shadow: 4px 3px 8px gray;
 
   div {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding-left: 5vw;
+    align-items: flex-start;
     width: 30vw;
   }
-
-  label,
-  button {
-    margin: 2vh;
+  
+  label {
+    margin: 0;
+    font-size: 3vh;
   }
+
+  input {
+    border: 1px solid black;
+    padding-left: 1vw;
+    font-size: 2vh;
+    margin-bottom: 3vh;
+    height: 4vh;
+    width: 20vw;
+  }
+
+  input,
+  button {
+    border-radius: 10px;
+  }
+
+  button {
+    border: none;
+    background-color: #dc8998;
+    font-size: 3vh;
+    height: 5vh;
+    width: 10vw;
+    margin-top: 1vh;
+  }
+}
+
+h2,
+h3 {
+  font-size: 5vh;
+}
+
+button {
+  cursor: pointer;
 }
 
 .right-side {
@@ -36,8 +72,25 @@
   flex-direction: column;
   align-items: center;
   height: 70vh;
+  margin-top: 10vh;
+  border-radius: 0 8px 8px 0;
+  box-shadow: 2px 3px 8px gray;
 
   h3 {
-    font-size: 5vh;
+    padding: 0 2vh;
+  }
+
+  p {
+    font-size: x-large;
+  }
+
+  button {
+    border: none;
+    border-radius: 10px;
+    background-color: white;
+    font-size: 3vh;
+    height: 5vh;
+    width: 10vw;
+    margin-top: 1vh;
   }
 }
