--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
   <section class="left-side">
     <h2>{{title}}</h2>
-    <form #loginForm="ngForm" (ngSubmit)="submitForm(loginForm)">
+    <form #loginForm="ngForm" (ngSubmit)="submitLogin(loginForm)">
       <div>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" [(ngModel)]="user.email" required />
