--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,6 +9,7 @@
       <div>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" [(ngModel)]="user.password" required />
+        <input type="checkbox" (click)="togglePassword()">Show Password
       </div>
       <div>
         <button type="submit" [disabled]="loginForm.invalid || !validateEmail()">Login</button>
