--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,19 @@
-<div>
+<div class="home">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
   @if (userInfo) {
     <h2>Namaste, {{ userInfo.user.data.attributes.name }}</h2>
   }
+
+  <section class="daily-streak">
+    <h2>Daily Practice Streak</h2>
+    <button>Log Practice</button>
+    <!-- <div class="button">
+      <div class="text">Submit</div>
+    </div>
+    <div class="progress-bar"></div>
+    <svg x="0px" y="0px"
+     viewBox="0 0 25 30" style="enable-background:new 0 0 25 30;">
+      <path class="check" class="st0" d="M2,19.2C5.9,23.6,9.4,28,9.4,28L23,2"/>
+    </svg> -->
+  </section>
 </div>
