--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,6 @@
 .nav-wrapper {
-  background-color: #787fa1;
+  background-color: white;
+  box-shadow: var(--shadow-elevation-medium);
 
   .nav-bar {
     display: flex;
@@ -9,13 +10,13 @@
     margin: 0 1vw;
 
     .title {
-      color: #f1dcd9;
-      color: white;
+      color: var(--dark-green);
       font-size: 60px;
       cursor: pointer;
+      transition-duration: 0.4s;
 
       &:hover {
-        color: #fec5b9;
+        color: var(--light-green);
       }
     }
 
@@ -28,27 +29,31 @@
         align-items: center;
         justify-content: center;
         border-radius: 10px;
-        background-color: #f1dcd9;
         background-color: white;
+        // background-color: #FEC5B9;
         height: 40px;
         width: 150px;
         margin: 0 8px;
         cursor: pointer;
         font-size: 30px;
-        color: #787fa1;
-
+        color: var(--dark-green);
+        transition-duration: 0.4s;
+        
         &:hover {
           background-color: #fec5b9;
+          // transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
         }
       }
 
       i {
         font-size: 50px;
-        color: white;
+        color: var(--dark-green);
         cursor: pointer;
+        transition-duration: 0.4s;
 
         &:hover {
-          color: #fec5b9;
+          color: var(--light-green);
+          // color: var(--deep-green);
         }
       }
     }
