--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,87 +1,102 @@
-.home {
+.top-elements {
   display: flex;
   justify-content: space-around;
   height: 100%;
   width: 100%;
   margin-top: 50px;
+  
+  .daily-streak {
+    border: 1px solid black;
+    border-radius: 10px;
+    // background-color: var(--cream);
+    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+    width: 300px;
+    
+    button {
+      border: none;
+      border-radius: 10px;
+      color: white;
+      color: black;
+      font-size: larger;
+      text-align: center;
+      // background-color: #718ec4;
+      // background-color: rgb(113, 142, 196, 0.6);
+      background-color: var(--light-blue);
+      // opacity: 0.6;
+      height: 50px;
+      width: 150px;
+      cursor: pointer;
+      transition-duration: 0.4s;
+    }
+    
+    button:hover {
+      // background-color: rgb(113, 142, 196);
+      // opacity: 1;
+      background-color: var(--blue);
+      // color: white;
+    }
+  }
 }
 
-.daily-streak {
-  border: 1px solid black;
-  border-radius: 10px;
+.nav-buttons {
+  // border: 1px solid orange;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 200px;
-  width: 300px;
+  justify-content: space-evenly;
+  height: 100%;
+  width: 100%;
+  margin: 100px 0;
 
-  button {
-    border: none;
+  a {
     border-radius: 10px;
-    color: white;
+    background-color: var(--peach);
+    box-shadow: var(--shadow-elevation-medium);
+
+    color: black;
     font-size: larger;
     text-align: center;
-    background-color: #718ec4;
-    opacity: 0.6;
+    line-height: 50px;
+    // text-align: center;
+    // vertical-align: baseline;
     height: 50px;
-    width: 150px;
-    cursor: pointer;
-  }
+    width: 300px;
+    transition-duration: 0.4s;
 
-  button:hover {
-    opacity: 1;
+    &:hover {
+      background-color: var(--tan-peach);
+    }
   }
-  // .button {
-  //   background: #2B2D2F;
-  //   height: 80px;
-  //   width: 200px;
-  //   text-align: center;
-  //   position: absolute;
-  //   top: 50%;
-  //   transform: translateY(-50%);
-  //   left: 0;
-  //   right: 0;
-  //   margin: 0 auto;
-  //   cursor: pointer;
-  //   border-radius: 4px;
-  // }
-  
-  // .text {
-  //   font: bold 1.25rem/1 poppins;
-  //   color: #71DFBE;
-  //   position: absolute;
-  //   top: 50%;
-  //   transform: translateY(-52%);
-  //   left: 0;
-  //   right: 0;
-  // }
-  
-  // .progress-bar {
-  //   position: absolute;
-  //   height: 10px;
-  //   width: 0;
-  //   right: 0;
-  //   top: 50%;
-  //   left: 50%;
-  //   border-radius: 200px;
-  //   transform: translateY(-50%) translateX(-50%);
-  //   background: lighten(#2B2D2F, 15%);
-  // }
-  
-  // svg {
-  //   width: 30px;
-  //   position: absolute;
-  //   top: 50%;
-  //   transform: translateY(-50%) translateX(-50%);
-  //   left: 50%;
-  //   right: 0;
-  // }
-  
-  // .check {
-  //   fill: none;
-  //   stroke: #FFFFFF;
-  //   stroke-width: 3;
-  //   stroke-linecap: round;
-  //   stroke-linejoin: round;
-  // }
 }
+
+// @media screen and (max-width: 450px) {
+//   // WELCOME AND CHECK-IN
+//   // .top-elements {
+
+//   // }
+//   // BUTTONS
+//   .nav-buttons {
+//     // border: 1px solid orange;
+//     display: flex;
+//     flex-direction: column;
+//     // justify-content: space-evenly;
+//     height: 100%;
+//     width: 100%;
+//     margin: 100px 0;
+  
+//     a {
+//       border-radius: 10px;
+//       background-color: #fec5b9;
+//       color: black;
+//       font-size: larger;
+//       text-align: center;
+//       line-height: 50px;
+//       // text-align: center;
+//       // vertical-align: baseline;
+//       height: 50px;
+//       width: 300px;
+//     }
+//   }
+// }
