--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     }
     
     <section class="daily-streak">
-      <h2>Daily Practice Streak</h2>
+      <h2>20 Days of Practice!</h2>
       <button>Log Practice</button>
     </section>
   </div>
