--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,12 +13,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 200px;
     width: 300px;
     
     button {
       border: none;
-      border-radius: 10px;
+      border-radius: 5px;
       color: white;
       color: black;
       font-size: larger;
@@ -51,7 +52,7 @@
   margin: 100px 0;
 
   a {
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: var(--peach);
     box-shadow: var(--shadow-elevation-medium);
 
@@ -71,6 +72,12 @@
   }
 }
 
+// iPad Air
+// @media screen and (max-width: 820px) {
+
+// }
+
+// iPhone 14 Pro Max
 // @media screen and (max-width: 450px) {
 //   // WELCOME AND CHECK-IN
 //   // .top-elements {
