Feat: dropdown menu with checkboxes works

--- a/src/app/components/poses/poses.component.scss
+++ b/src/app/components/poses/poses.component.scss
@@ -27,6 +27,53 @@
     font-size: 40px;
     cursor: pointer;
   }
+  
+  .search-and-filter {
+    position: relative;
+    // display: flex;
+    // align-items: center;
+    // gap: 10px;
+    display: inline-block;
+  }
+  
+  #filter-button {
+    cursor: pointer;
+  }
+  
+  /* Hide menu by default */
+  .filter-menu {
+    display: none;
+    position: absolute;
+    // position: relative;
+    // top: 40px;
+    top: 35vh;
+    // left: 0;
+    left: 50vw;
+    background-color: var(--peach);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 10px;
+    z-index: 1;
+  
+    label {
+      // display: block;
+      display: flex;
+      align-items: center;
+      // justify-content: flex-start;
+      justify-content: space-between;
+      padding: 5px 0;
+    }
+
+    input {
+      margin: 0;
+      width: 25px;
+    }
+  }
+  
+  /* Show menu when open */
+  .filter-menu.open {
+    display: block;
+  }
 }
 
 .poses-container {
