--- a/src/app/components/poses/poses.component.html
+++ b/src/app/components/poses/poses.component.html
@@ -1,15 +1,31 @@
 <div class="poses-view">
   <h2>Poses</h2>
+
   <section class="search-and-filter">
     <i class="material-icons" alt="Search Icon">search</i>
     <input type="search"
       id="pose-search"
       placeholder="Search..."
-      [(ngModel)]="movieSearch"
-      (input)="searchPoses()"
-      >
-    <i class="material-icons" alt="Filter Icon">filter_list</i>
-    <p>Filter</p>
+      [(ngModel)]="poseSearch"
+      (input)="searchPoses($event)"
+    >
+  
+    <!-- Click to toggle filter menu -->
+    <i id="filter-button" class="material-icons" alt="Filter Icon" (click)="toggleFilterMenu()">filter_list</i>
+  
+    <!-- Filter menu -->
+    <div class="filter-menu" [ngClass]="{ 'open': filterMenuOpen }">
+      <p>Filter Results</p>
+      <label>
+        <input className="filterInput" type="checkbox"> Beginner
+      </label>
+      <label>
+        <input className="filterInput" type="checkbox"> Intermediate
+      </label>
+      <label>
+        <input className="filterInput" type="checkbox"> Advanced
+      </label>
+    </div>
   </section>
 
   @if (!data) {
