--- a/src/app/components/poses/poses.component.scss
+++ b/src/app/components/poses/poses.component.scss
@@ -30,9 +30,6 @@
   
   .search-and-filter {
     position: relative;
-    // display: flex;
-    // align-items: center;
-    // gap: 10px;
     display: inline-block;
   }
   
@@ -43,36 +40,29 @@
   /* Hide menu by default */
   .filter-menu {
     display: none;
-    position: absolute;
-    // position: relative;
-    // top: 40px;
-    top: 35vh;
-    // left: 0;
-    left: 50vw;
-    background-color: var(--peach);
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    height: 3vh;
     padding: 10px;
     z-index: 1;
-  
+   
     label {
-      // display: block;
       display: flex;
       align-items: center;
-      // justify-content: flex-start;
       justify-content: space-between;
       padding: 5px 0;
+      margin: 5px;
     }
 
     input {
-      margin: 0;
+      margin: 3px;
       width: 25px;
+      height: 20px;
     }
   }
-  
   /* Show menu when open */
   .filter-menu.open {
-    display: block;
+    display: flex;
+    align-items: center;
   }
 }
 
