Feat: pose details renders information about the pose and includes conditional rendering for the pose name and data

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,12 +1,14 @@
 .nav-wrapper {
   background-color: white;
   box-shadow: var(--shadow-elevation-medium);
+  // position: fixed;
 
   .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 80px;
+    // width: 97vw;
     margin: 0 1vw;
 
     .title {
