--- a/src/app/components/poses/poses.component.html
+++ b/src/app/components/poses/poses.component.html
@@ -34,7 +34,7 @@
   <section class="poses-container">
     @for (pose of data; track pose.data.id) {
       <div class="pose" (click)="handlePoseClick(pose.data.id)">
-        <img src="{{pose.data.attributes.image_url}}" alt="Girl in a jacket"/>
+        <img src="{{pose.data.attributes.image_url}}" alt="{{pose.data.attributes.name}}"/>
         <h3>{{pose.data.attributes.name}}</h3>
         <p>{{pose.data.attributes.sanskrit_name}}</p>
       </div>
