Fix: header now remains fixed on the top of the screen, landing page now includes an image

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,11 @@
 .nav-wrapper {
   background-color: white;
   box-shadow: var(--shadow-elevation-medium);
-  // position: fixed;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  // height: 80px;
+  top: 0;
 
   .nav-bar {
     display: flex;
