--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,10 +5,12 @@
       <h2>Namaste, {{ userInfo.user.data.attributes.name }}</h2>
     }
     
-    <section class="daily-streak">
+    <!-- <section class="daily-streak">
       <h2>20 Days of Practice!</h2>
       <button>Log Practice</button>
-    </section>
+    </section> -->
+    <!-- <img src="/assets/meditation.jpg" alt="Meditation Spot" class="welcome-img"/> -->
+    <img src="/assets/waterfall.jpg" alt="Meditation Spot" class="welcome-img"/>
   </div>
 
   <div class="nav-buttons">
