--- a/src/app/components/pose-details/pose-details.component.scss
+++ b/src/app/components/pose-details/pose-details.component.scss
@@ -3,6 +3,7 @@
   // .material-icons {
   //   height: 100px;
   // }
+  margin-top: 80px;
 
   .pose-details {
     display: flex;
@@ -30,7 +31,7 @@
     .name-translation,
     .description {
       margin: 5px;
-      font-size: 1.5rem;
+      font-size: 1.25rem;
     }
   }
 
