--- a/src/app/components/poses/poses.component.scss
+++ b/src/app/components/poses/poses.component.scss
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 80px;
 
   font-family: "Lato", sans-serif;
   h2 {
-    font-size: xx-large;
+    font-size: 2.5rem;
+    color: var(--dark-green);
   }
 }
 
@@ -89,8 +91,9 @@
     }
 
     h3 {
-      font-size: xx-large;
+      font-size: 2rem;
       margin: 5px;
+      text-align: center;
     }
 
     p {
