--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,25 +2,27 @@
   <section class="left-side">
     <h2>{{title}}</h2>
     <form #loginForm="ngForm" (ngSubmit)="submitLogin(loginForm)">
-      <div>
+      <div class="email-div">
         <label for="email">Email</label>
         <input type="email" id="email" name="email" [(ngModel)]="user.email" required />
       </div>
-      <div>
+      <div class="password-div">
         <label for="password">Password</label>
         <input type="password" id="password" name="password" [(ngModel)]="user.password" required />
         <div class="show-password">
-          <input type="checkbox" (click)="togglePassword()">Show Password
+          <label>Show Password</label>
+          <input type="checkbox" (click)="togglePassword()" class="toggle-password"/>
         </div>
       </div>
-      <div>
-        <button type="submit" [disabled]="loginForm.invalid || !validateEmail()">Login</button>
+      <div class="login-div">
+        <button type="submit" [disabled]="loginForm.invalid || !validateEmail()" class="login-button">Login</button>
       </div>
     </form>
   </section>
   <section class="right-side">
     <h3>Welcome to YogaFlow</h3>
+    <!-- <p>Explore various yoga poses <br/> and track your daily progress.</p> -->
     <p>Don't have an account?</p>
-    <button>Sign Up</button>
+    <button class="sign-up-button">Sign Up</button>
   </section>
 </div>
