--- a/src/app/components/routines/routines.component.scss
+++ b/src/app/components/routines/routines.component.scss
@@ -9,4 +9,21 @@
     font-size: 2.5rem;
     color: var(--dark-green);
   }
+
+  .routines-container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 75vw;
+    
+    .routine {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      border: 1px solid orange;
+      height: 300px;
+      width: 300px;
+      padding: 5px;
+    }
+  }
 }
