Feat: removed User and ID service, added serviced for fetcing routines and poses, removed user button from header, replaced home page text, updated routing to bypass the login page

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -19,6 +19,10 @@
       font-size: 2.75rem;
       margin-bottom: 0;
     }
+
+    .welcome-text {
+      text-align: center;
+    }
   }
 
   .welcome-img {
