--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,14 @@
 <div class="home">
   <div class="top-elements">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
-    @if (userInfo) {
+    <!-- @if (userInfo) { -->
       <div class="top-text">
         <h2>Namaste</h2>
-        <p class="welcome-text">Welcome, {{ userInfo.user.data.attributes.name }}.</p>
+        <p class="welcome-text">Welcome to YogaFlow. 
+          Click on the buttons below to explore a variety of yoga poses
+          or spend some time in practice by selecting a routine.</p>
       </div>
-    }
+    <!-- } -->
     
     <!-- <section class="daily-streak">
       <h2>20 Days of Practice!</h2>
@@ -20,6 +22,6 @@
     <a href="/poses">Explore Poses</a>
     <a href="/routines">View Routines</a>
     <!-- <a href="/new-routine">Create A New Routine</a> -->
-    <a>Create A New Routine</a>
+    <!-- <a>Create A New Routine</a> -->
   </div>
 </div>
