Fix: removed old user information

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,9 @@
 <div class="home">
   <div class="top-elements">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     <div class="top-text">
       <h2>Namaste</h2>
-      <p class="welcome-text">Welcome to YogaFlow. 
-        Click on the buttons below to explore a variety of yoga poses
-        or spend some time in practice by selecting a routine.</p>
+      <p class="welcome-text">Welcome to YogaFlow. <br/>
+        Take a moment for yourself—explore individual yoga poses or ease into a guided routine.</p>
     </div>
     <img src="/assets/waterfall.jpg" alt="Meditation Spot" class="welcome-img"/>
   </div>
@@ -13,6 +11,6 @@
     <a href="/poses">Explore Poses</a>
     <a href="/routines">View Routines</a>
     <!-- <a href="/new-routine">Create A New Routine</a> -->
-    <!-- <a>Create A New Routine</a> -->
+    <a>Create A New Routine</a>
   </div>
 </div>
