--- a/src/app/components/pose-details/pose-details.component.html
+++ b/src/app/components/pose-details/pose-details.component.html
@@ -1,15 +1,13 @@
 <div class="pose-details-view">
   @if (!data) {
     <p>Loading...</p>
+  } @else {
+    <section class="pose-details">
+      <h1 class="pose-name">{{ formatName() }}</h1>
+      <img class="pose-img" src="{{data.data.attributes.image_url}}" alt="{{ formatName() }}"/>
+      <h3 class="sanskrit-name">Sanskrit: {{data.data.attributes.sanskrit_name}}</h3>
+      <p class="name-translation">{{data.data.attributes.translation_name}}</p>
+      <p class="description">{{data.data.attributes.pose_description}}</p>
+    </section>
   }
-  <!-- <i class="material-icons">keyboard_backspace</i> -->
-  <section class="pose-details">
-    <h1 class="pose-name">{{ formatName() }}</h1>
-    <img class="pose-img" src="{{data.data.attributes.image_url}}" alt="{{ formatName() }}"/>
-
-    <h3 class="sanskrit-name">Sanskrit: {{data.data.attributes.sanskrit_name}}</h3>
-    <p class="name-translation">{{data.data.attributes.translation_name}}</p>
-    <p class="description">{{data.data.attributes.pose_description}}</p>
-  </section>
-
 </div>
