--- a/src/app/components/routines/routines.component.scss
+++ b/src/app/components/routines/routines.component.scss
@@ -10,20 +10,89 @@
     color: var(--dark-green);
   }
 
+  .search-and-filter {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 63vw;
+  
+    input {
+      border-radius: 5px;
+      height: 30px;
+      width: 200px;
+      margin: 0 50px 0 0;
+      padding: 5px;
+    }
+  
+    i {
+      font-size: 40px;
+      cursor: pointer;
+    }
+    
+    .search-and-filter {
+      position: relative;
+      display: inline-block;
+    }
+    
+    #filter-button {
+      cursor: pointer;
+    }
+    
+    /* Hide menu by default */
+    .filter-menu {
+      display: none;
+      min-width: 160px;
+      height: 3vh;
+      padding: 10px;
+      z-index: 1;
+     
+      label {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 5px 0;
+        margin: 5px;
+      }
+  
+      input {
+        margin: 3px;
+        width: 25px;
+        height: 20px;
+      }
+    }
+    /* Show menu when open */
+    .filter-menu.open {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   .routines-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    justify-content: center;
     width: 75vw;
     
     .routine {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      border: 1px solid orange;
-      height: 300px;
-      width: 300px;
-      padding: 5px;
+      border: 1px solid gainsboro;
+      background-color: whitesmoke;
+      display: grid;
+      justify-content: center;
+      justify-items: center;
+      width: 350px;
+      margin: 5px;
+      padding: 8px;
+      cursor: pointer;
+
+      p {
+        padding: 5px;
+        text-align: center;
+      }
+    }
+    .routine:hover {
+      transform: scale(1.05);
+      transition: 0.3s ease-in-out;
     }
   }
 }
