--- a/src/app/components/routines/routines.component.html
+++ b/src/app/components/routines/routines.component.html
@@ -11,13 +11,35 @@
     <i id="filter-button" class="material-icons" alt="Filter Icon" (click)="toggleFilterMenu()">filter_list</i>  
     <div class="filter-menu" [ngClass]="{ 'open': filterMenuOpen }">
       <label>
-        <input className="filterInput" type="checkbox"> Beginner
+        <input
+          className="difficulty-input"
+          id="beginner-routine"
+          type="checkbox"
+          [(ngModel)]="filterOptions[0].isChecked"
+          (change)="filterByDifficulty()"
+        >
+        Beginner
+        <!-- {{ filterOptions[0] | json}} -->
       </label>
       <label>
-        <input className="filterInput" type="checkbox"> Intermediate
+        <input
+          className="difficulty-input"
+          id="intermediate-routine"
+          type="checkbox"
+          [(ngModel)]="filterOptions[1].isChecked"
+          (change)="filterByDifficulty()"
+        >
+        Intermediate
       </label>
       <label>
-        <input className="filterInput" type="checkbox"> Advanced
+        <input
+          className="difficulty-input"
+          id="advanced-routine"
+          type="checkbox"
+          [(ngModel)]="filterOptions[2].isChecked"
+          (change)="filterByDifficulty()"
+        >
+        Advanced
       </label>
     </div>
   </section>
