--- a/src/app/components/poses/poses.component.scss
+++ b/src/app/components/poses/poses.component.scss
@@ -35,37 +35,37 @@
     display: inline-block;
   }
   
-  #filter-button {
-    cursor: pointer;
-  }
+  // #filter-button {
+  //   cursor: pointer;
+  // }
   
   /* Hide menu by default */
-  .filter-menu {
-    display: none;
-    min-width: 160px;
-    height: 3vh;
-    padding: 10px;
-    z-index: 1;
+  // .filter-menu {
+  //   display: none;
+  //   min-width: 160px;
+  //   height: 3vh;
+  //   padding: 10px;
+  //   z-index: 1;
    
-    label {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 5px 0;
-      margin: 5px;
-    }
+  //   label {
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: space-between;
+  //     padding: 5px 0;
+  //     margin: 5px;
+  //   }
 
-    input {
-      margin: 3px;
-      width: 25px;
-      height: 20px;
-    }
-  }
+  //   input {
+  //     margin: 3px;
+  //     width: 25px;
+  //     height: 20px;
+  //   }
+  // }
   /* Show menu when open */
-  .filter-menu.open {
-    display: flex;
-    align-items: center;
-  }
+//   .filter-menu.open {
+//     display: flex;
+//     align-items: center;
+//   }
 }
 
 .poses-container {
