--- a/src/app/components/routine-details/routine-details.component.html
+++ b/src/app/components/routine-details/routine-details.component.html
@@ -3,16 +3,18 @@
     <p>Loading...</p>
   } @else {
     <section class="routine-details">
-      <h1>{{routineData.name}}</h1>
+      <h1 class="routine-name">{{routineData.name}}</h1>
       <p>{{routineData.description}}</p>
       <p>Difficulty level: {{routineData.difficulty}}</p>
 
+      <section class="pose-layout">
       @for (pose of routineData.routine_poses; track pose.id) {
-        <div>
-          <h3 class="pose-name">{{pose.name}}</h3>
-          <img class="pose-img" src="{{pose.image_url}}" alt="{{pose.name}}"/>
-        </div>
-      }
+          <div class="pose-box">
+            <h3 class="pose-name">{{pose.name}}</h3>
+            <img class="pose-img" src="{{pose.image_url}}" alt="{{pose.name}}"/>
+          </div>
+        }
+      </section>
     </section>
   }
 </div>
