--- a/src/app/components/routine-details/routine-details.component.scss
+++ b/src/app/components/routine-details/routine-details.component.scss
@@ -1,5 +1,6 @@
 .routine-details-view {
   margin-top: 80px;
+  margin-bottom: 50px;
   
   .routine-details {
     display: flex;
@@ -7,7 +8,9 @@
     align-items: center;
 
     .pose-layout {
-      display: grid;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
 
       .routine-name {
         font-size: 3rem;
@@ -15,9 +18,14 @@
       }
       
       .pose-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        border: 1px solid gainsboro;
+        background-color: whitesmoke;
+        display: grid;
+        justify-content: center;
+        justify-items: center;
+        width: 300px;
+        margin: 5px;
+        padding: 8px;
       }
     }
   }
