--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,1 @@
-<!-- <p>header works!</p>
-<div class="nav-wrapper">
-  <nav class="nav-bar">
-    <h1 class="title">YogaFlow</h1>
-  </nav>
-</div> -->
+<!-- <p>header works!</p> -->
