Feat: added user login back into application, addedd example login info to the login page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,5 +23,11 @@
     <h3>Welcome to YogaFlow</h3>
     <p>Don't have an account?</p>
     <button class="sign-up-button">Sign Up</button>
+    <div class="example-login">
+      <p class="example-title">Example User Login</p>
+      <p>Email: dollyP&#64;email.com <br/>
+      Password: Jolene123</p>
+    </div>
   </section>
+
 </div>
