--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,7 @@
+// * {
+//   border: 1px solid orange;
+// }
+
 .login {
   display: flex;
   justify-content: center;
@@ -106,6 +110,25 @@
       height: 50px;
       width: 200px;
       margin-top: 15px;
+    }
+
+    .example-login {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border-radius: 2px;
+      background-color: powderblue;
+      height: 300px;
+      width: 300px;
+      margin-top: 50px;
+      transform: rotate(5deg);
+      box-shadow: var(--shadow-elevation-medium);
+      font-family: "Mynerve", cursive;
+
+      .example-title {
+        font-size: 2rem;
+        margin: 10px 0 0 0;
+      }
     }
   }
 }
