Feat: added observable to login component, replaced fetch

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,3 @@
-// * {
-//   border: 1px solid orange;
-// }
-
 .login {
   display: flex;
   justify-content: center;
@@ -38,7 +34,6 @@
       padding-left: 8px;
       font-size: 1.5rem;
       margin-bottom: 3vh;
-      // height: 4vh;
       height: 40px;
       width: 300px;
     }
@@ -123,7 +118,7 @@
       margin-top: 50px;
       transform: rotate(5deg);
       box-shadow: var(--shadow-elevation-medium);
-      font-family: "Mynerve", cursive;
+      font-family: "Indie Flower", cursive;
 
       .example-title {
         font-size: 2rem;
