Feat: changed href to routerLink to prevent token refresh on page refresh

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,8 +8,8 @@
     <img src="/assets/waterfall.jpg" alt="Meditation Spot" class="welcome-img"/>
   </div>
   <div class="nav-buttons">
-    <a href="/poses">Explore Poses</a>
-    <a href="/routines">View Routines</a>
+    <a routerLink="/poses">Explore Poses</a>
+    <a routerLink="/routines">View Routines</a>
     <!-- <a href="/new-routine">Create A New Routine</a> -->
     <a>Create A New Routine</a>
   </div>
