Fix: welcome banner

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="home">
   <div class="top-elements">
     <div class="top-text">
-      <h2>Namaste</h2>
-      <p class="welcome-text">Welcome to YogaFlow. <br/>
-        Take a moment for yourself—explore individual yoga poses or ease into a guided routine.</p>
+      <h2>Welcome to YogaFlow!</h2>
+      <p class="welcome-text">
+        Take a moment for yourself—explore individual yoga poses or ease into a guided routine. Namaste.</p>
     </div>
     <img src="/assets/waterfall.jpg" alt="Meditation Spot" class="welcome-img"/>
   </div>
