Feat: added user's name to the welcome page by grabbing it from state

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home">
   <div class="top-elements">
     <div class="top-text">
-      <h2>Welcome to YogaFlow!</h2>
+      <h2>Welcome {{ userName }}!</h2>
       <p class="welcome-text">
         Take a moment for yourself—explore individual yoga poses or ease into a guided routine. Namaste.</p>
     </div>
@@ -11,6 +11,6 @@
     <a routerLink="/poses">Explore Poses</a>
     <a routerLink="/routines">View Routines</a>
     <!-- <a href="/new-routine">Create A New Routine</a> -->
-    <a>Create A New Routine</a>
+    <!-- <a>Create A New Routine</a> -->
   </div>
 </div>
