--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,33 +1,47 @@
 <div class="login">
-  <section class="left-side">
+  <section class="login-div">
+    <img src="/assets/shape.png" class="geometric-img"/>
     <h2>{{title}}</h2>
     <form #loginForm="ngForm" (ngSubmit)="submitLogin(loginForm)">
-      <div class="email-div">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" [(ngModel)]="user.email" required />
+      <div class="form-div">
+        <!-- <label for="email">Email</label> -->
+        <input type="email" id="email" name="email" class="email" placeholder="Email Address" [(ngModel)]="user.email" required />
       </div>
-      <div class="password-div">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" [(ngModel)]="user.password" required />
-        <div class="show-password">
-          <label>Show Password</label>
-          <input type="checkbox" (click)="togglePassword()" class="toggle-password"/>
-        </div>
+      <div class="form-div">
+        <!-- <label for="password">Password</label> -->
+        <input type="password" id="password" name="password" class="password" placeholder="Password" [(ngModel)]="user.password" required />
       </div>
-      <div class="login-div">
+      <div class="show-password">
+        <input type="checkbox" (click)="togglePassword()" class="toggle-password"/>
+        <label>Show Password</label>
+      </div>
+      <!-- <div class="login-button"> -->
         <button type="submit" [disabled]="loginForm.invalid || !validateEmail()" class="login-button">Login</button>
-      </div>
+      <!-- </div> -->
     </form>
+    <div class="divider">
+      <div class="divider-branch"></div>
+      <div class="divider-center">
+        <svg height="24" width="24" viewBox="0 0 24 24" fill="none">
+          <path d="M12 2L8 8h8l-4-6zM12 22l4-6H8l4 6zM2 12l6-4v8l-6-4zM22 12l-6 4V8l6 4z" fill="currentColor" opacity="0.6"></path>
+        </svg>
+      </div>
+      <div class="divider-branch"></div>
+    </div>
+    <div class="signup-div">
+      <span>New to YogaFlow? </span>
+      <a class="signup-link">Begin your journey</a>
+    </div>
   </section>
-  <section class="right-side">
+  <!-- <section class="signup-div">
     <h3>Welcome to YogaFlow</h3>
     <p>Don't have an account?</p>
-    <button class="sign-up-button">Sign Up</button>
+    <button class="sign-up-button" disabled>Sign Up</button>
     <div class="example-login">
       <p class="example-title">Example User Login</p>
       <p>Email: dollyP&#64;email.com <br/>
       Password: Jolene123</p>
     </div>
-  </section>
+  </section> -->
 
 </div>
